force-app/main/default/objects/Students__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <label>Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>