force-app/main/default/objects/Students__c/fields/Father_Details__c.field-meta.xml
<CustomField>
    <fullName>Father_Details__c</fullName>
    <label>Father Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>