force-app/main/default/objects/Students__c/fields/Hindi__c.field-meta.xml
<CustomField>
    <fullName>Hindi__c</fullName>
    <label>Hindi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>