force-app/main/default/objects/Students__c/fields/Mother_Details__c.field-meta.xml
<CustomField>
    <fullName>Mother_Details__c</fullName>
    <label>Mother Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>