force-app/main/default/objects/Students__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <label>Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>