force-app/main/default/objects/Students__c/fields/Telugu__c.field-meta.xml
<CustomField>
    <fullName>Telugu__c</fullName>
    <label>Telugu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>